--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body {
   #game {
     display: flex;
     flex-wrap: wrap;
-    width: 300px;
-    height: 300px;
+    width: 308px;
+    height: 308px;
     border: 2px solid black;
     margin: 0 auto;
   }
@@ -22,6 +22,9 @@ body {
     line-height: 100px;
     text-align: center;
     cursor: pointer;
+    border: 1px solid black;
+    margin: 0;
+    padding: 0;
   }
   
   #buttons {
