move to grid layout

--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,12 @@
-body{width: 350px;margin:auto;padding: 1%;}
+body{width: 100vw;}
 /* Add some style to the game */
 .game {
-  display: flex;
-  flex-wrap: wrap;
-  width: 300px;
-  height: 300px;
-  /* border: 1px solid black; */
+  display: grid;
+  grid-template-columns: repeat(3,25vh);
 }
 .square {
-  width: 98px;
-  height: 98px;
+  width: 25vh;
+  height: 25vh;
   display: flex;
   justify-content: center;
   align-items: center;
